===============================================================================
$Id$
$URL$
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Adding "clean" flag to reg_test scripts, only outputting one file
             for netCDF output of Bryan-Lewis tests.

Files Modified:
M       reg_tests/shear-KPP/Large_test.sh
M       reg_tests/Bryan-Lewis/BL_test.sh
M       src/drivers/vmix_BL_driver-pointers.F90
M       src/drivers/vmix_BL_driver-mem_copy.F90
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Bug-fix -- I didn't mean to hard-code in ncol_id=2 for output

Files Modified:
M       src/vmix_output.F90
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Overhaul of the output routines, now all writing is done from one
             of two routines (single_col or multi_col) and variables to be
             written are also an argument sent to vmix_output_write(). As the
             drivers evolve, this will make it easier to add variables to the
             output stream.

Files Modified:
M       reg_tests/shear-KPP/plot_visc_coeffs.ncl
M       doc/protex_documentation.pdf
M       src/vmix_output.F90
M       src/drivers/vmix_KPP-shear_driver.F90
M       src/drivers/vmix_BL_driver-pointers.F90
M       src/drivers/vmix_BL_driver-mem_copy.F90
===============================================================================
New Checkin: mlevy
Date:        1 Dec 2012
Summary:     Updated the README file, renamed shear-KPP test script and the
             PS file generated by the NCL script.

Files Modified:
D       reg_tests/shear-KPP/KPP_test.sh
M       reg_tests/shear-KPP/plot_visc_coeffs.ncl
A  +    reg_tests/shear-KPP/Large_test.sh
M       README