@@ -3,6 +3,15 @@ $Id$
 $URL$
 ===============================================================================
 New Checkin: mlevy
+Date:        3 Dec 2012
+Summary:     New output routines don't require storing Ri in z_iface for shear
+             test.
+
+Files Modified:
+M       src/vmix_output.F90
+M       src/drivers/vmix_KPP-shear_driver.F90
+===============================================================================
+New Checkin: mlevy
 Date:        2 Dec 2012
 Summary:     Adding "clean" flag to reg_test scripts, only outputting one file
              for netCDF output of Bryan-Lewis tests.
